# talentRadar

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  BUILD_SUMMARY.md  DEPLOYMENT.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
.qwen/: settings.json
agents/: __init__.py  graph.py  ml_scorer.py  orchestrator.py  rag_agent.py  state.py  trend_agent.py
agents/prompts/: intent_prompt.py  rag_prompt.py  trend_prompt.py
api/: auth.py  dependencies.py  main.py
api/routers/: ingest.py  query.py  recommend.py  search.py  trends.py
api/schemas/: job_schemas.py  query_schemas.py
config/: settings.py
data/raw/: .gitkeep
docs/: DEPENDENCIES.md  PYPROJECT_SUMMARY.md
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/match/: page.tsx
frontend/app/search/: page.tsx
frontend/app/trends/: page.tsx
frontend/components/: Header.tsx  JobCard.tsx  SearchBar.tsx
infra/: Dockerfile  Dockerfile.airflow  cloudrun.yaml  prometheus.yml
infra/kubernetes/: talentradar.yaml
ingestion/dags/: fetch_and_parse_dag.py
ingestion/embeddings/: chroma_store.py  embedder.py
ingestion/parsers/: __init__.py  jd_parser.py  schemas.py
ingestion/scrapers/: __init__.py  tavily_client.py
storage/: database.py  models.py  repository.py
storage/migrations/: env.py  script.py.mako
storage/migrations/versions/: 001_initial_schema.py
tests/: conftest.py  smoke_test_ingestion.py  test_agents.py  test_api.py  test_pipeline_e2e.py
