[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ===========================================================================
# Project metadata
# ===========================================================================
[project]
name = "talentRadar"
version = "0.1.0"
description = "A multi-agent job-intelligence platform that ingests job postings, extracts structured signals via LLMs, and answers natural-language queries using RAG."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "TalentRadar Contributors" },
]
keywords = ["job-intelligence", "rag", "langgraph", "fastapi", "airflow", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

# ===========================================================================
# Core dependencies (required to run the application)
# ===========================================================================
dependencies = [
    # --- FastAPI & web framework ---
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",

    # --- Pydantic & settings ---
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "email-validator>=2.1.0",  # required by Pydantic for HTTPBearer

    # --- SQLAlchemy & database drivers ---
    "sqlalchemy>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",           # async PostgreSQL driver
    "psycopg2-binary>=2.9.9,<3.0.0",    # sync driver for Alembic migrations
    "alembic>=1.13.0,<2.0.0",

    # --- LangGraph & LLM orchestration ---
    "langgraph>=0.2.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",  # Groq uses OpenAI-compatible API
    "langchain-core>=0.3.0,<1.0.0",

    # --- LLM API client ---
    "groq>=0.9.0,<1.0.0",

    # --- Vector store & embeddings ---
    "chromadb>=0.5.0,<1.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",  # all-MiniLM-L6-v2 embeddings
    "torch>=2.3.0,<3.0.0",

    # --- Reranking ---
    "sentence-transformers>=3.0.0",         # cross-encoder/ms-marco-MiniLM-L-6-v2

    # --- Search & scraping (ingestion) ---
    "tavily-python>=0.5.0,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "httpx>=0.27.0,<1.0.0",
    "lxml>=5.2.0,<6.0.0",

    # --- Apache Airflow (ingestion DAG scheduler) ---
    "apache-airflow>=2.9.0,<3.0.0",
    "apache-airflow-providers-http>=4.0.0",

    # --- Authentication & security ---
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.9,<1.0.0",

    # --- Task queue & caching ---
    "celery>=5.4.0,<6.0.0",
    "redis>=5.0.0,<6.0.0",

    # --- Google Cloud (optional blob storage) ---
    "google-cloud-storage>=2.17.0,<3.0.0",

    # --- Machine learning (optional XGBoost scorer) ---
    "xgboost>=2.1.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "numpy>=1.26.0,<2.0.0",

    # --- Logging & observability ---
    "structlog>=24.1.0,<25.0.0",
    "prometheus-client>=0.20.0,<1.0.0",

    # --- Rate limiting ---
    "slowapi>=0.1.9,<1.0.0",

    # --- Environment & config ---
    "python-dotenv>=1.0.1,<2.0.0",

    # --- HTML/text processing ---
    "html2text>=2024.2.0",

    # --- Utilities ---
    "tenacity>=8.3.0,<9.0.0",  # retry decorator
    "python-dateutil>=2.9.0",
]

# ===========================================================================
# Development dependencies (testing, linting, tooling)
# ===========================================================================
[project.optional-dependencies]

# --- Testing ---
dev = [
    # Test framework
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-xdist>=3.6.0",           # parallel test execution

    # Test utilities
    "pytest-mock>=3.14.0",
    "faker>=26.0.0",                 # synthetic test data
    "factory-boy>=3.3.0",            # test fixtures

    # HTTP test client
    "httpx>=0.27.0",

    # RAG evaluation
    "ragas>=0.1.0,<1.0.0",
    "datasets>=2.20.0",

    # Database test fixtures
    "pytest-postgresql>=6.0.0",      # spinning up test PostgreSQL instances
    "testcontainers[postgresql]>=4.0.0",
]

# --- Linting & type checking ---
lint = [
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "types-python-jose>=3.3.0",
    "types-passlib>=1.7.0",
    "types-redis>=4.6.0",
    "types-python-dateutil>=2.9.0",
    "pre-commit>=3.7.0",
]

# --- Code formatting & quality ---
format = [
    "black>=24.4.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
]

# --- Documentation ---
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

# --- All development deps combined ---
all = [
    "talentRadar[dev,lint,format,docs]",
]

# ===========================================================================
# Tool configurations
# ===========================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services (DB, API)",
    "rag_eval: marks RAG evaluation tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # Ruff-specific rules
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
]
ignore = [
    "ANN101",  # missing type annotation for `self`
    "ANN102",  # missing type annotation for `cls`
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function call in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "api", "config", "ingestion", "ml", "storage", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "tavily.*",
    "ragas.*",
    "slowapi.*",
    "structlog.*",
    "sentence_transformers.*",
    "apache_airflow.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 70
show_missing = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "__pycache__", "migrations"]
known_first_party = ["agents", "api", "config", "ingestion", "ml", "storage"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "config", "ingestion", "ml", "storage"]

# ===========================================================================
# Entry points / CLI commands
# ===========================================================================
[project.scripts]
talentradar = "api.main:main"

# ===========================================================================
# UV / pip resolution hints (optional, for faster installs)
# ===========================================================================
[tool.uv]
# Prefer pre-built binary wheels where available
prefer-binary = true
